kubernetes/overlays/k3s/homelab/policy/portefaix-kyverno/portefaix-policy-s0001.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-project-s0001
  annotations:
    policies.kyverno.io/title: Restrict Storage Classes
    policies.kyverno.io/category: Storage
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Storage Class
    policies.kyverno.io/description: >-
      Restrict PersistentVolumeClaim resources to a set of known storage
      classes that are allowed in the cluster.
spec:
  rules:
  - name: validate-pvc-sc
    match:
      resources:
        kinds:
        - PersistentVolumeClaim
    validate:
      message: "Unknown storage class."
      pattern:
        spec:
          storageClassName: "nfs-client"
